--- a/Task.html
+++ b/Task.html
@@ -19,7 +19,7 @@
                     <div class="hr-sect">
                         <h1>YAY! It's BOGO</h1>
                     </div>
-                    <div id="cart-container" class="container"></div>
+                    <div id="cart-container" class="container p-4"></div>
 
                 </div>
                 <div class="container my-2">
